<resources>
    <string name="app_name">RecipMe</string>
    <string name="login_username_or_email">Username or Email</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_need_an_account">Need an account?</string>
    <string name="login_create_an_account_now"><u><![CDATA[Create an account now >]]></u></string>
    <string name="register_title">Create an account.</string>
    <string name="register_username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="sign_up">Sign Up</string>
    <string name="Breakfast_Dishes">Breakfast dishes</string>
    <string name="Brunch_Dishes">Brunch dishes</string>
    <string name="Lunch_Dishes">Lunch dishes</string>
    <string name="Dinner_Dishes">Dinner dishes</string>
    <string name="Welcome">Welcome</string>
    <string-array name="Difficulty">
        <item> Very Easy</item>
        <item> Easy</item>
        <item> Medium</item>
        <item> Hard </item>
        <item> Very Hard</item>
    </string-array>

    <string-array name="array_recipe">
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Chicken noodles</item>
        <item>spaghetti</item>
        <item>Magherita pizza</item>
        <item>Catsu curry</item>
        <item>firecracker noodles</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
        <item>Italian pasta</item>
    </string-array>

    <string-array name="menu_titles_array">
        <item>My Profile</item>
        <item>My Recipes</item>
        <item>Settings</item>
        <item>Sign out</item>
    </string-array>

    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_nav_menu">NavMenu</string>
    <string name="app_not_available">app not available</string>

</resources>
